
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u32 ;
struct pci_dev {int dummy; } ;


 int CTRL_P0EN ;
 int CTRL_P0F16 ;
 int CTRL_P1F16 ;
 int pci_read_config_dword (struct pci_dev*,int,int*) ;
 int pci_write_config_dword (struct pci_dev*,int,int) ;

__attribute__((used)) static void sl82c105_fixup(struct pci_dev *pdev)
{
 u32 val;

 pci_read_config_dword(pdev, 0x40, &val);
 val |= CTRL_P0EN | CTRL_P0F16 | CTRL_P1F16;
 pci_write_config_dword(pdev, 0x40, val);
}
